source/sass/modularity-open-street-map.scss
/* Our code */
.modularity-openstreetmap {
	position: relative;

	.modularity-openstreetmap__marker {
		padding: var(--base, 8px);
		border-radius: 50%;
		margin-left: calc(var(--base, 8px) * -1.5);
		animation: markerAnimation 0.5s forwards;
	}

	@keyframes markerAnimation {
		0% {
			transform: scale(1);
		}
		50% {
			transform: scale(1.4);
		}
		100% {
			transform: scale(1);
		}
	}

	.modularity-openstreetmap__tooltip-title {
		cursor: pointer;
	}

	.modularity-openstreetmap__expand-icon-desktop {
		display: none;
	}

	.modularity-openstreetmap__expand-icon-container {
		transition: top 0.3s ease-in-out;
		top: calc(var(--base, 8px) * 6);
		position: sticky;
		z-index: 8000;
	}

	.modularity-openstreetmap__expand-icon-desktop,
	.modularity-openstreetmap__expand-icon-mobile {
		z-index: 8000;
		color: var(--color--primary-contrast, var(--color-white));
		background-color: var(--color--primary, var(--color-primary));
		padding: calc(var(--base, 8px) * 0.5);
		cursor: pointer;
		border-radius: 50%;

		&::after {
			display: flex;
		}
	}

	.modularity-openstreetmap__expand-icon-mobile {
		position: absolute !important;
		top: calc(var(--base, 8px) * -2);
		left: 50%;
		transform: translateX(-50%);

		&::after {
			transform: rotate(180deg);
		}
	}

	.modularity-openstreetmap__expand-icon-desktop {
		position: absolute;
		transform: translate(-50%, calc(var(--base, 8px) * -3));
		border-radius: 50%;
		top: 50%;
		right: 0;
		transform: translateY(-50%);
		border-radius: 50% 0px 0px 50%;

		&::after {
			transform: rotate(270deg);
		}
	}

	.modularity-openstreetmap__post-full {
		position: fixed;
		height: 100%;
		width: 100%;
		top: 0;
		right: 100%;
		opacity: 0;
		margin-left: auto;
		z-index: 6000;
		overflow-y: scroll;
		background-color: var(--color--background, var(--color-white));
		pointer-events: none;

		&.is-open {
			pointer-events: all;
			animation: openPost 0.2s ease-in-out forwards;
			transition: top 0.2s ease-in-out;
		}

		&.is-closed {
			animation: closePost 0.2s ease-in-out forwards;
		}

		@keyframes closePost {
			from {
				right: 0;
				opacity: 1;
			}
			to {
				right: -100%;
				opacity: 0;
			}
		}

		@keyframes openPost {
			from {
				right: -100%;
				opacity: 0;
			}
			to {
				right: 0;
				opacity: 1;
			}
		}
	}
}

.modularity-openstreetmap.modularity-openstreetmap--sidebar.has-open-post {
	z-index: 9000;

	.modularity-openstreetmap__expand-icon-container {
		position: fixed;
		left: 50%;
	}

	.modularity-openstreetmap__map {
		position: fixed;
		width: 100%;
	}

	&.modularity-openstreetmap--size-md {
		.modularity-openstreetmap__map {
			position: sticky;
			width: unset;
		}
	}
}

.modularity-openstreetmap.modularity-openstreetmap--full-width {
	width: calc(100vw - var(--scrollbar, 15px));
	left: 50%;
	right: 50%;
	margin-left: -50vw;
	margin-right: -50vw;
	border-radius: 0;
}

.modularity-openstreetmap.modularity-openstreetmap--size-md {
	position: relative;
	display: flex;
	flex-direction: row;
	background-color: var(--color--background, var(--color-white));

	.modularity-openstreetmap__expand-icon-mobile {
		display: none;
	}

	.modularity-openstreetmap__expand-icon-desktop {
		display: block;
	}

	.modularity-openstreetmap__tooltip-image {
		aspect-ratio: 16/9;
		max-width: 100%;
	}

	.modularity-openstreetmap__inner-blocks {
		overflow-x: hidden;
		overflow-y: auto;
	}

	.modularity-openstreetmap__map {
		flex: 1 1 50%;
	}

	.modularity-openstreetmap__sidebar {
		flex: 1 0 50%;
		max-width: 50%;
	}

	.modularity-openstreetmap__post-full {
		width: 50%;
	}

	&.modularity-openstreetmap--size-xl {
		.modularity-openstreetmap__map {
			flex: 1 1 60%;
		}

		.modularity-openstreetmap__sidebar {
			flex: 1 0 40%;
			max-width: 40%;
		}

		.modularity-openstreetmap__post-full {
			width: 40%;
		}
	}
}

.modularity-openstreetmap.modularity-openstreetmap--sidebar.is-expanded {
	.modularity-openstreetmap__map {
		z-index: 7000;
		top: 0;
		transition: top 0.3s ease-in-out;
	}

	.modularity-openstreetmap__expand-icon-container {
		top: calc(var(--base, 8px) * 50);
	}

	.modularity-openstreetmap__expand-icon-desktop::after {
		transform: rotate(90deg);
	}

	.modularity-openstreetmap__expand-icon-mobile::after {
		transform: rotate(0deg);
	}

	.modularity-openstreetmap__post-full {
		top: calc(var(--base, 8px) * 50);
		height: calc(100% - (calc(var(--base, 8px) * 50)));
		transition:
			top 0.4s ease-in-out,
			height 0.6s ease-in-out;
	}

	&.modularity-openstreetmap--size-md {
		.modularity-openstreetmap__map {
			flex: 1 0 20%;
		}

		.modularity-openstreetmap__sidebar {
			flex: 1 0 80%;
			max-width: 80%;
		}

		.modularity-openstreetmap__posts .modularity-openstreetmap__post-full {
			height: 100%;
			width: 80%;
			top: 0;
		}
	}
}
/* ... */

